# pytest-django-docker-pg

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: release.yml
pytest_django_docker_pg/: plugin.py
tests/: test_plugin.py
